# comp0034-cw2g-group10

./: DashboardApp.py  MAPAPP.py  README.md  TEST.py  TEST1.html  TEST2.html  TEST2.js  app.py  app3.py  helpers.py  pyproject.toml  requirements.txt  test2.html  test3.html  test_dashboard_app.py  token.txt
DashboardApp/: account-page.html  analytics-page.css  analytics-page.html  dashboard-page.css  dashboard-page.html  fake-graph1-popup.html  fake-graph2-popup.html  fake-graph3-popup.html  fake-graph4-popup.html  index.html  log-in-page.html  settings-page.css  settings-page.html  sign-up-page.html  snapshot-page.css  snapshot-page.html
Datasets/: Editdatabase.py  Timeseries_region.py
Datasets/Edited_Forecasts/: combined_forecast_Region_sex_age_group.csv  edited_forecast_ITL_sex_age_group.csv  edited_forecast_Region_sex_age_group.csv  (+1 more)
Forecasting Data/: Editdatabase.py  Timeseries_ITL.py  Timeseries_country.py  Timeseries_lad.py
dataset/: users.csv
static/: account-page.css  analytics-page.css  fake-graph1-popup.css  fake-graph2-popup.css  fake-graph3-popup.css  fake-graph4-popup.css  global.css  index.css  log-in-page.css  map.css  sign-up-page.css  snapshot-page.css
templates/: MAP2.html  account-page.html  account.html  analytics-page.html  analytics.html  dashboard-page.html  fake-graph1-popup.html  fake-graph2-popup.html  fake-graph3-popup.html  fake-graph4-popup.html  home.html  index.html  log-in-page.html  login.html  map.html  map_explorer.html  settings-page.html  settings.html  sign-up-page.html  signup.html  snapshot-page.html  snapshot.html
(+5 files in other folders)
